--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-hotkeys-rt": "^0.2.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue-cli-service": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
