--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "serve": "vue-cli-service serve",
     "start": "npm run serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "heroku-postinstall": "npm install && npm run build"
+    "lint": "vue-cli-service lint"
   },
-  "heroku-postinstall": "npm install && npm run build",
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
